--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "check:all": "run-s js:check format:check editorconfig:check"
   },
   "dependencies": {
-    "vue": "^3.2.45",
-    "vue-router": "4"
+    "vue": "^3.2.45"
   },
   "devDependencies": {
     "@types/markdown-it": "^12.2.3",
